manifests/dev/ersatztv/Namespace-ersatztv.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: ersatztv
