manifests/dev/ersatztv/Deployment-ersatztv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: ersatztv
    app.kubernetes.io/name: ersatztv
    app.kubernetes.io/version: latest
  name: ersatztv
  namespace: ersatztv
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: ersatztv
      app.kubernetes.io/name: ersatztv
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ersatztv
        app.kubernetes.io/name: ersatztv
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: TZ
              value: Etc/UTC
            - name: ERSATZTV_PORT
              value: "8409"
            - name: ASPNETCORE_ENVIRONMENT
              value: Production
            - name: ASPNETCORE_URLS
              value: http://0.0.0.0:8409
            - name: Logging__LogLevel__Default
              value: Information
          image: jasongdove/ersatztv:latest
          imagePullPolicy: IfNotPresent
          name: ersatztv
          ports:
            - containerPort: 8409
              name: http
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
            privileged: false
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media
              name: media
            - mountPath: /app/data
              name: data
            - mountPath: /dev/dri/renderD128
              name: dri
      nodeSelector:
        kubernetes.io/hostname: edgenix
      serviceAccountName: default
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: ersatztv-ersatztv-config
        - name: data
          persistentVolumeClaim:
            claimName: ersatztv-ersatztv-data
        - name: media
          persistentVolumeClaim:
            claimName: ersatztv-ersatztv-media
        - hostPath:
            path: /dev/dri/renderD129
            type: CharDevice
          name: dri
