manifests/dev/ersatztv/Service-ersatztv.yaml
apiVersion: v1
kind: Service
metadata:
  name: ersatztv
  namespace: ersatztv
spec:
  ports:
    - name: http
      port: 8409
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: ersatztv
    app.kubernetes.io/name: ersatztv
  type: ClusterIP
