manifests/dev/ersatztv/Ingress-ersatztv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: tailscale
    ingress.kubernetes.io/force-ssl-redirect: "true"
  name: ersatztv
  namespace: ersatztv
spec:
  ingressClassName: tailscale
  rules:
    - host: ersatztv.bearded-snake.ts.net
      http:
        paths:
          - backend:
              service:
                name: ersatztv
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - ersatztv.bearded-snake.ts.net
